# adventofcode

./: .gitmodules
2020/day1/: day1  day1.cpp  day1.py
2020/day2/: day2  day2.cpp
2020/day3/: day3  day3.cpp
2020/day4/: day4  day4.cpp  test.txt
2021/day1/: day1  day1.cpp  day1part2.py
2021/day2/: day2  day2.cpp
2021/day3/: day3  day3.cpp  day3part1.py  day3part2.py
2021/day4/: day4.py
2021/day5/: day5.py  output.txt
2021/day6/: day6.py
2021/day7/: day7.py
2021/day9/: day9.py
2023/ocaml/: flake.nix  readme.md
2023/python/: day1.py  day10.py  day11.py  day2.py  day21.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  readme.md
2024/ocaml/: flake.nix
2024/python/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2024/zig/: day1.zig  day2.zig  day3.zig
day1/: day1part1.py
day2/: day2.py  part1.js  part2.js  readme.md
day3/: day3part1.py  day3part2.py
day4/: day4.py  day4.txt
day5/: day5.py  output.txt
day8/: day8.py
rust/: .gitignore  Cargo.toml  readme.md
rust/benches/: bench.rs
rust/src/: lib.rs  main.rs
rust/src/util/: sample.rs
rust/src/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs
rust/src/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
rust/tests/: test.rs  year2024.rs  year2025.rs
(+8 files in other folders)
