[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

[profile.bench]
incremental = true

[dependencies]
clap = { version = "4.5.23", features = ["cargo"] }
fxhash = "0.2.1"
itertools = "0.13.0"
microlp = "0.2.11"
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
